# ASTra-Core

./: .gitignore  CMakeLists.txt  MainWindow_rsf_ast_patch.diff  PATCH_SUMMARY.txt  README.md  stdout.txt
apps/: CMakeLists.txt
apps/astra_updater/: CMakeLists.txt
apps/astra_updater/src/: main.cpp
apps/gf_cli/: CMakeLists.txt
apps/gf_cli/src/: main.cpp
apps/gf_toolsuite_gui/: CMakeLists.txt
apps/gf_toolsuite_gui/resources/: astra.rc  astra_resources.qrc  ea-sports.csv
apps/gf_toolsuite_gui/resources/game_icons/filetypes/: README.txt
apps/gf_toolsuite_gui/src/: ActiveProfileWidget.cpp  ActiveProfileWidget.hpp  AddGameDialog.cpp  AddGameDialog.hpp  ApplyPreviewDialog.cpp  ApplyPreviewDialog.hpp  AstIndexer.cpp  AstIndexer.hpp  AudioBrowserPanel.cpp  AudioBrowserPanel.hpp  AudioPlayer.cpp  AudioPlayer.hpp  BaselineCaptureService.cpp  BaselineCaptureService.hpp  ContentRootDiscovery.hpp  CreateDlcAstDialog.cpp  CreateDlcAstDialog.hpp  CreateRsfAstDialog.cpp  CreateRsfAstDialog.hpp  DeploymentState.hpp  DeploymentStateStore.cpp  DeploymentStateStore.hpp  DocumentLifecycle.hpp  DriftDetector.cpp  DriftDetector.hpp  ExportModDialog.cpp  ExportModDialog.hpp  GameIconProvider.cpp  GameIconProvider.hpp  GameLibrary.cpp  GameLibrary.hpp  GamePlatform.cpp  GamePlatform.hpp  GameSelectorWindow.cpp  GameSelectorWindow.hpp  GuiSettings.hpp  InstallModDialog.cpp  InstallModDialog.hpp  InstalledModRecord.hpp  InstalledModsDialog.cpp  (+84 more)
apps/gf_toolsuite_gui/src/apt_editor/: AptPreviewItem.cpp  AptPreviewItem.hpp  AptPreviewScene.cpp  AptPreviewScene.hpp  AptSelectionManager.cpp  AptSelectionManager.hpp
apps/gf_toolsuite_gui/src/rsf_editor/: RsfPreviewWidget.cpp  RsfPreviewWidget.hpp
apps/gf_toolsuite_gui/src/update/: UpdateChecker.cpp  UpdateChecker.hpp  UpdateDialog.cpp  UpdateDialog.hpp  UpdaterConfig.hpp  UpdaterLauncher.cpp  UpdaterLauncher.hpp  VersionBadgeWidget.cpp  VersionBadgeWidget.hpp
cmake/: gf_options.cmake  gf_version.cmake  gf_warnings.cmake
cmake/templates/: version.hpp.in
docs/: detection_rules.md
docs/architecture/: architecture.md
docs/requirements/: requirements.md
libs/: CMakeLists.txt
libs/gf_apt/: CMakeLists.txt
libs/gf_apt/include/gf/apt/: apt_action_inspector.hpp  apt_reader.hpp  apt_renderer.hpp  apt_transform.hpp  apt_xml.hpp
libs/gf_apt/src/: apt_reader.cpp  apt_renderer.cpp  apt_xml.cpp
libs/gf_apt/src/aptconverter/: ActionHelper.cpp  Aptfile.cpp  Aptfile.hpp  Util.hpp
libs/gf_audio/: CMakeLists.txt
libs/gf_audio/include/gf/audio/: sbbe_reader.hpp  sbbe_types.hpp  sbkr_reader.hpp  sbkr_types.hpp
libs/gf_audio/src/: sbbe_reader.cpp  sbkr_reader.cpp
libs/gf_core/: CMakeLists.txt
libs/gf_core/include/gf/core/: AstArchive.hpp  AstContainerBuilder.hpp  AstContainerEditor.hpp  AstRootResolver.hpp  config.hpp  container_magic.hpp  features.hpp  file_detection.hpp  log.hpp  safe_write.hpp  scan.hpp  version_model.hpp  zip_writer.hpp
libs/gf_core/include/gf/media/: avi_vp6.hpp  ea_vp6.hpp  ea_vp6_containerizer.hpp  ea_vp6_import_prep.hpp  ea_vp6_replacement_backend.hpp  ffmpeg_runner.hpp  flv_vp6.hpp  media_exporter.hpp  media_sniffer.hpp  vp6_encoder_backend.hpp
libs/gf_core/src/: AstArchive.cpp  AstContainerBuilder.cpp  AstContainerEditor.cpp  AstRootResolver.cpp  avi_vp6.cpp  config.cpp  container_magic.cpp  ea_vp6.cpp  ea_vp6_containerizer.cpp  ea_vp6_import_prep.cpp  ea_vp6_replacement_backend.cpp  features.cpp  ffmpeg_runner.cpp  file_detection.cpp  flv_vp6.cpp  log.cpp  media_exporter.cpp  media_sniffer.cpp  safe_write.cpp  scan.cpp  version_model.cpp  vp6_encoder_backend.cpp  zip_writer.cpp
libs/gf_dat/: CMakeLists.txt
libs/gf_dat/include/gf/dat/: dat_reader.hpp
libs/gf_dat/src/: dat_reader.cpp
libs/gf_models/: CMakeLists.txt
libs/gf_models/include/gf/models/: rsf.hpp  rsf_preview.hpp  scan_result.hpp
libs/gf_models/src/: rsf.cpp  rsf_preview.cpp  scan_result.cpp
libs/gf_platform_ps3/: CMakeLists.txt
libs/gf_platform_ps3/include/gf/platform/ps3/: param_sfo.hpp
libs/gf_platform_ps3/src/: param_sfo.cpp
libs/gf_textures/: CMakeLists.txt
libs/gf_textures/include/gf/textures/: dds_build.hpp  dds_decode.hpp  dds_validate.hpp  dxt_compress.hpp  ea_dds_rebuild.hpp  texture_replace.hpp  tga_reader.hpp  xbox360_xpr2_untile.hpp  xpr2_rebuild.hpp
libs/gf_textures/src/: dds_build.cpp  dds_decode.cpp  dds_validate.cpp  dxt_compress.cpp  ea_dds_rebuild.cpp  texture_replace.cpp  tga_reader.cpp  xbox360_xpr2_untile.cpp  xpr2_rebuild.cpp
tests/fixtures/: README.md
tests/unit/: CMakeLists.txt  test_apt_display_list.cpp  test_apt_transform.cpp  test_ast_container_builder.cpp  test_ast_container_editor.cpp  test_config.cpp  test_container_magic.cpp  test_dds_validate.cpp  test_features.cpp  test_rsf_preview.cpp  test_scan_heuristics.cpp  test_scan_result_json.cpp  test_texture_replace.cpp  test_version.cpp
